integration/fixtures/k8s-session-persistence/gateway-sticky-failover/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-failover
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-failover.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-failover
          port: 80
      sessionPersistence:
        sessionName: sticky-failover
        type: Cookie
        cookieConfig:
          lifetimeType: Session
